--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,104 @@
     <title>Document</title>
 </head>
 <body>
+ <!-- Хедер -->
+ <header> 
+  <nav>
+    <a href="/" lang="en">WebStudio</a>
+    <ul>
+        <li> <a href="">Студія</a> </li>
+        <li> <a href="">Портфоліо</a> </li>
+        <li> <a href="">Контакти</a> </li>
+    </ul>
+  </nav>
+    <p> 
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a> 
+    </p> 
+    <p>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+    </p>
     
+ </header>
+ <!--Мейн-->
+ <main>
+ <!-- Герой -->
+ <div>
+    <section>
+        <h1>Ефектівні рішення <br/> для вашого бізнесу</h1>
+        <button type="button" class="button">Замовити послугу</button>
+    </section>
+ </div>
+ <!-- Особливості -->
+ <section>
+    <ul>
+        <li> 
+            <h3>Увага до деталей</h3> 
+            <p>Ідейні міркування, а також початок повсякденної роботи з формування позиції.</p>
+        </li>
+
+        <li> 
+            <h3>Пунктуальність</h3>
+            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+        </li>
+
+        <li>
+           <h3>Планування</h3> 
+           <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+        </li>
+
+        <li>
+         <h3>Сучасні технології</h3>  
+         <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>  
+        </li>
+    </ul>
+ </section>
+ <!--Приклади робіт-->
+ <section>
+    <h2>Чим ми займаємося</h2>
+    <ul>
+        <li> <img src="./images/left.jpg" alt="typing on pc" width="370" height="294"></li>
+        <li><img src="./images/middle.jpg" alt="select the widget layout on laptop" width="370" height="294"></li>
+        <li><img src="./images/right.jpg" alt="choose a color palette on the tablet" width="370" height="294"></li>
+    </ul>
+ </section>
+ <!--Команда-->
+ <section> 
+    <h2>Наша команда</h2>
+    <ul>
+        <li>
+          <img src="./images/team/1.jpg" alt="a yong smilling man with glasses and a beard " width="270" height="260">  
+          <p>Ігор Дем'яненко</p>
+          <p lang="en">Product Designer</p>
+        </li>
+        <li>
+            <img src="./images/team/2.jpg" alt="a yong smilling woman with glasses" width="270" height="260">
+            <p>Ольга Рєпіна</p>
+            <p lang="en">Frontend Developer</p>
+        </li>
+        <li>
+            <img src="./images/team/3.jpg" alt=" yong smilling man in shirt" width="270" height="260">
+            <p>Микола Тарасов</p>
+            <p lang="en">Marketing</p>
+        </li>
+        <li>
+            <img src="./images/team/4.jpg" alt=" yong smilling man with glasses and a beard in a t-shirt" width="270" height="260">
+            <p>Михайло Єрмаков</p>
+            <p lang="en">UI Designer</p>
+        </li>
+    </ul>
+ </section>
+</main>
+<!--Футер-->
+<footer>
+    <a href="/" lang="en">WebStudio</a>
+    <address> 
+        м. Київ, пр-т Лесі Українки, 26 <br/>
+
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br/>
+   
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+    </address>
+</footer>
 </body>
 </html>
 
