додала списки та link на адресу

--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
         <li> <a href="">Контакти</a> </li>
     </ul>
   </nav>
-    <p> 
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a> 
-    </p> 
-    <p>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-    </p>
+    <ul>
+        <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+        <li> <a href="tel:+380961111111">+38 096 111 11 11</a> </li>
+    </ul>
     
  </header>
  <!--Мейн-->
@@ -36,6 +34,7 @@
  </div>
  <!-- Особливості -->
  <section>
+    <h2>Особливості роботи</h2>
     <ul>
         <li> 
             <h3>Увага до деталей</h3> 
@@ -98,11 +97,13 @@
 <footer>
     <a href="/" lang="en">WebStudio</a>
     <address> 
-        м. Київ, пр-т Лесі Українки, 26 <br/>
-
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br/>
+        <ul>
+            <li> <a href="https://www.google.com/maps/d/viewer?mid=10uSM3H-mIU3GznYo2szRIEphczw&hl=en_US&ll=50.42732700000001%2C30.538092&z=17" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a> <br /> </li>
+        
+            <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br/> </li>
    
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <li> <a href="tel:+380961111111">+38 096 111 11 11</a> </li> 
+        </ul>
     </address>
 </footer>
 </body>
