--- a/index.html
+++ b/index.html
@@ -72,22 +72,22 @@
     <ul>
         <li>
           <img src="./images/team/1.jpg" alt="a yong smilling man with glasses and a beard " width="270" height="260">  
-          <p>Ігор Дем'яненко</p>
+          <h3>Ігор Дем'яненко</h3>
           <p lang="en">Product Designer</p>
         </li>
         <li>
             <img src="./images/team/2.jpg" alt="a yong smilling woman with glasses" width="270" height="260">
-            <p>Ольга Рєпіна</p>
+            <h3>Ольга Рєпіна</h3>
             <p lang="en">Frontend Developer</p>
         </li>
         <li>
             <img src="./images/team/3.jpg" alt=" yong smilling man in shirt" width="270" height="260">
-            <p>Микола Тарасов</p>
+            <h3>Микола Тарасов</h3>
             <p lang="en">Marketing</p>
         </li>
         <li>
             <img src="./images/team/4.jpg" alt=" yong smilling man with glasses and a beard in a t-shirt" width="270" height="260">
-            <p>Михайло Єрмаков</p>
+            <h3>Михайло Єрмаков</h3>
             <p lang="en">UI Designer</p>
         </li>
     </ul>
