--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./portfolio.html">
 </head>
 <body>
  <!-- Хедер -->
  <header> 
   <nav>
-    <a href="/" lang="en">WebStudio</a>
-    <ul>
-        <li> <a href="">Студія</a> </li>
-        <li> <a href="">Портфоліо</a> </li>
-        <li> <a href="">Контакти</a> </li>
+    <a href="/" lang="en" class="logo">WebStudio</a>
+    <ul class="site-nav list">
+        <li> <a href="./studio.html" class="link current">Студія</a> </li>
+        <li> <a href="./portfolio.html" class="link current">Портфоліо</a> </li>
+        <li> <a href="" class="link current">Контакти</a> </li>
     </ul>
   </nav>
-    <ul>
+    <ul class="contact list">
         <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
         <li> <a href="tel:+380961111111">+38 096 111 11 11</a> </li>
     </ul>
@@ -26,68 +28,66 @@
  <!--Мейн-->
  <main>
  <!-- Герой -->
- <div>
-    <section>
-        <h1>Ефектівні рішення <br/> для вашого бізнесу</h1>
-        <button type="button" class="button">Замовити послугу</button>
-    </section>
- </div>
+ <section class="hero">
+    <h1 class="hero-title">Ефектівні рішення <br/> для вашого бізнесу</h1>
+    <button type="button" class="button">Замовити послугу</button>
+ </section>
  <!-- Особливості -->
- <section>
-    <h2>Особливості роботи</h2>
-    <ul>
+ <section class="section">
+    <h2 class="section-title">Особливості роботи</h2>
+    <ul  class="feature" class="list">
         <li> 
-            <h3>Увага до деталей</h3> 
+            <h3 class="feature-title">Увага до деталей</h3> 
             <p>Ідейні міркування, а також початок повсякденної роботи з формування позиції.</p>
         </li>
 
         <li> 
-            <h3>Пунктуальність</h3>
+            <h3 class="feature-title">Пунктуальність</h3>
             <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
         </li>
 
         <li>
-           <h3>Планування</h3> 
+           <h3 class="feature-title">Планування</h3> 
            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
         </li>
 
         <li>
-         <h3>Сучасні технології</h3>  
+         <h3 class="feature-title">Сучасні технології</h3>  
          <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>  
         </li>
     </ul>
  </section>
- <!--Приклади робіт-->
- <section>
-    <h2>Чим ми займаємося</h2>
-    <ul>
+ <!--Приклади робіт або Портфоліо-->
+ <section class="section">
+    <h2 class="section-title">Чим ми займаємося</h2>
+    <ul class="list">
         <li> <img src="./images/left.jpg" alt="typing on pc" width="370" height="294"></li>
         <li><img src="./images/middle.jpg" alt="select the widget layout on laptop" width="370" height="294"></li>
         <li><img src="./images/right.jpg" alt="choose a color palette on the tablet" width="370" height="294"></li>
     </ul>
  </section>
  <!--Команда-->
- <section> 
-    <h2>Наша команда</h2>
-    <ul>
+ <section class="section" class="team"> 
+    <h2 class="section-title">Наша команда</h2>
+    <ul class="team" class="list" >
         <li>
           <img src="./images/team/1.jpg" alt="a yong smilling man with glasses and a beard " width="270" height="260">  
-          <h3>Ігор Дем'яненко</h3>
+          <h3 class="team-title">Ігор Дем'яненко</h3>
           <p lang="en">Product Designer</p>
         </li>
         <li>
             <img src="./images/team/2.jpg" alt="a yong smilling woman with glasses" width="270" height="260">
-            <h3>Ольга Рєпіна</h3>
+            <h3 class="team-title">Ольга Рєпіна</h3>
             <p lang="en">Frontend Developer</p>
         </li>
         <li>
             <img src="./images/team/3.jpg" alt=" yong smilling man in shirt" width="270" height="260">
-            <h3>Микола Тарасов</h3>
+            <h3 class="team-title">Микола Тарасов</h3>
             <p lang="en">Marketing</p>
         </li>
         <li>
             <img src="./images/team/4.jpg" alt=" yong smilling man with glasses and a beard in a t-shirt" width="270" height="260">
-            <h3>Михайло Єрмаков</h3>
+            <h3 class="team-title">Михайло Єрмаков</h3>
             <p lang="en">UI Designer</p>
         </li>
     </ul>
@@ -97,7 +97,7 @@
 <footer>
     <a href="/" lang="en">WebStudio</a>
     <address> 
-        <ul>
+        <ul class="list">
             <li> <a href="https://www.google.com/maps/d/viewer?mid=10uSM3H-mIU3GznYo2szRIEphczw&hl=en_US&ll=50.42732700000001%2C30.538092&z=17" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a> <br /> </li>
         
             <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br/> </li>
