--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
  <!-- Хедер -->
  <header> 
-  <nav>
+  <nav>чому  рірорр
     <a href="/" lang="en">WebStudio</a>
     <ul>
         <li> <a href="">Студія</a> </li>
